Mockito_11/evosuite/fixing/evosuite-report-clz/test_build_fix.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Mockito_11_fix && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Mockito_11/Mockito/evosuite/3/org/mockito/internal/creation/DelegatingMethod_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Mockito_11/Mockito/evosuite/3/org/mockito/internal/creation/DelegatingMethod_ESTest_scaffolding.java >> evosuite-report-clz/test_build_fix.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Mockito_11/Mockito/evosuite/3/org/mockito/internal/creation/DelegatingMethod_ESTest.java:15: error: cannot find symbol
import org.mockito.internal.creation.DelegatingMethod;
                                    ^
  symbol:   class DelegatingMethod
  location: package org.mockito.internal.creation
/home/liumengjiao/Desktop/CI/Evosuite/Mockito_11/Mockito/evosuite/3/org/mockito/internal/creation/DelegatingMethod_ESTest.java:22: error: cannot find symbol
      DelegatingMethod delegatingMethod0 = null;
      ^
  symbol:   class DelegatingMethod
  location: class DelegatingMethod_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Mockito_11/Mockito/evosuite/3/org/mockito/internal/creation/DelegatingMethod_ESTest.java:24: error: cannot find symbol
        delegatingMethod0 = new DelegatingMethod((Method) null);
                                ^
  symbol:   class DelegatingMethod
  location: class DelegatingMethod_ESTest
3 errors
